# Indian-Tax-Advisor

./: Dockerfile  README.md  docker-compose.yml
agent-api/: Dockerfile  pyproject.toml
agent-api/src/: __init__.py  config.py
agent-api/src/application/conversation_service/: generate_response.py
agent-api/src/application/conversation_service/workflows/: chains.py  graph.py  nodes.py  state.py  tools.py
agent-api/src/application/evaluation/: evaluate.py
agent-api/src/application/rag/: retreivers.py
agent-api/src/domain/: prompts.py
agent-api/src/infrastructure/: api.py  opik_utils.py  qdrant_db.py
agent-ui/: Dockerfile  package-lock.json  package.json
agent-ui/src/: App.jsx  chatinterface.jsx  main.jsx
api/conversation/: generate_response.py  reset_conversation.py
api/conversation/workflows/: chains.py  edges.py  main.ipynb  nodes.py  tools.py
api/rag/: retreivers.py  splitters.py
backend/: config.py
backend/conversation/: generate_response.py  reset_conversation.py
backend/conversation/workflows/: chains.py  edges.py  graph.py  main.ipynb  nodes.py  state.py  tools.py
backend/infrastructure/: api.py
backend/rag/: __init__.py  retreivers.py
src/: config.py
src/application/conversation_service/: embed_conversation.py  generate_response.py  reset_conversation.py
src/application/conversation_service/workflows/: chains.py  (+5 more)
src/application/evaluation/: evaluate.py
src/application/rag/: embeddings.py  retreivers.py
src/domain/: prompts.py
src/infrastructure/: api.py  qdrant_db.py
src/infrastructure/mongo/: client.py  indexes.py
